2009-07-07  Thomas Moulard  <thomas.moulard@gmail.com>

	Check constraints and starting point sizes.
	* include/roboptim/core/problem.hxx: Add assertion
	so that invalid size in a constraint or starting point
	are checked.

2009-07-07  Thomas Moulard  <thomas.moulard@gmail.com>

	Add a safety check in addConstraint.
	* include/roboptim/core/problem.hxx: Check at compile-time
	that added constraint type is valid.

2009-07-03  Thomas Moulard  <thomas.moulard@gmail.com>

	Distribute missing stdout file.
	* tests/Makefile.am: Here.

2009-07-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Test more function classes.
	* tests/derivable-function.cc: Add more tests.
	* tests/derivable-function.stdout: Regenerate.
	* tests/function.cc: Add more tests.
	* tests/function.stdout: Regenerate.
	* tests/twice-derivable-function.cc: Add more tests.
	* tests/twice-derivable-function.stdout: Regenerate.

2009-07-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Add checks to functions tests.
	* tests/Makefile.am: Compile new tests and distribute new stdout files.
	* tests/derivable-function.cc: Call more methods.
	* tests/derivable-function.stdout: Regenerate.
	* tests/function.cc: Call more methods.
	* tests/function.stdout: Regenerate.
	* tests/linear-function.cc: Copy from tests/derivable-function.cc.
	* tests/linear-function.stdout: New.
	* tests/quadratic-function.cc: Copy from tests/twice-derivable-function.cc.
	* tests/quadratic-function.stdout: New.
	* tests/testsuite.at: Run new tests.
	* tests/twice-derivable-function.cc: Call more methods.
	* tests/twice-derivable-function.stdout: Regenerate.

2009-07-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Add tests for function classes.
	* tests/Makefile.am: Compile new tests and distribute
	output files.
	* tests/derivable-function.cc: New.
	* tests/derivable-function.stdout: New.
	* tests/function.cc: New.
	* tests/function.stdout: New.
	* tests/testsuite.at: Run new tests.
	* tests/twice-derivable-function.cc: New.