@@ -4,6 +4,7 @@
 (-inf, 42)
 (0 5 1)
 (-inf inf 0.1)
+(1 4 0.1)
 0
 1
 2
